--- a/app/config/test/config.toml
+++ b/app/config/test/config.toml
@@ -2,7 +2,7 @@ env = "test"
 
 http_addr = ":23200"
 #db
-db_master = "root:1995@Zxd@tcp(127.0.0.1:3306)/test?charset=utf8mb4&parseTime=true&loc=Local"
+db_master = "root:1995@Zxd@tcp(101.43.152.142:3306)/rbac?charset=utf8mb4&parseTime=true&loc=Local"
 
 
 #redis
